--- a/JenkinsFile
+++ b/JenkinsFile
@@ -5,6 +5,7 @@ pipeline {
         stage("Initial") {
             steps {
                 echo "Hello..This code is pulled from GitHub Repo"
+                readFile();
             }
         }
     }
